ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: koyun
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2  # Quita /api/v1/ antes de enviar al backend
    #cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  #tls:
  #- hosts:
  #  - koyunco.com
  #  secretName: letsencrypt-cert  # Certificado TLS almacenado como secreto en Kubernetes
  rules:
  #- host: koyunco.com
   - http:
      paths:

      - path: /api/v1/auth(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: api-auth  # Servicio interno de Kubernetes
            port:
              number: 80
              
      - path: /api/v1/user(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: api-user  # Servicio interno de Kubernetes
            port:
              number: 80
